# JLC2KiCad_lib

./: .gitignore  JLC2KiCad_lib.py  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
JLC2KiCadLib/: JLC2KiCadLib.py  __version__.py  helper.py
JLC2KiCadLib/footprint/: footprint.py  footprint_handlers.py  model3d.py  vector2.py
JLC2KiCadLib/schematic/: schematic.py  schematic_handlers.py
JLC2KiCadLib/symbol/: symbol.py  symbol_handlers.py
footprint/: footprint.py  footprint_handlers.py  model3d.py
schematic/: schematic.py  schematic_handlers.py
testLib/footprint/: .kicad_mod  C0402.kicad_mod
testLib/symbol/: CL05B104KO5NNNC.kicad_sym
